# option_chain_dashboard

./: .env.example  .gitignore  ANALYSIS_INDEX.md  CIRCUIT_BREAKER_IMPLEMENTATION.md  CLAUDE.md  COMPONENT_GUIDE.md  CONNECTIVITY_ANALYSIS.md  CONNECTIVITY_FIX_CHECKLIST.md  DATABASE_REPOSITORIES.md  DEPLOYMENT_STATUS.md  E2E_TEST_INDEX.txt  FILES_TO_MODIFY.md  HYBRID_TESTING_GUIDE.md  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_SUMMARY.md  ISSUE_15_FIX_SUMMARY.md  ISSUE_5_ANALYSIS.md  ISSUE_7_ANALYSIS.md  QUICK_REFERENCE.md  QUICK_START.md  README.md  README_CONNECTIVITY_FIX.md  TEST_QUICK_REFERENCE.txt  TEST_RESULTS.txt  TICKERS_KNOWLEDGE_BASE.md  main.py  pyproject.toml  requirements.txt  restart_system.sh  start.sh  start_backend_api.sh  start_frontend.sh  test_theses_api.py
docs/: CACHE_MANAGER.md  CACHE_QUICK_START.md  CIRCUIT_BREAKER.md  DATABASE_CONNECTION_GUIDE.md  DB_IMPLEMENTATION_SUMMARY.md  EXPLANATION_GENERATOR_USAGE.md  RISK_GATE_IMPLEMENTATION.md  RISK_GATE_QUICK_REFERENCE.md  SCHEDULER_ENGINE.md  index.md
docs/analysis/: ANALYSIS_INDEX.md
docs/architecture/: COMPONENTS_INDEX.md  FOUNDATION_MODULES.md
docs/archive/: CONNECTIVITY_SUMMARY.txt  E2E_TEST_SUMMARY.txt  IMPLEMENTATION_SUMMARY.txt  README.md
docs/connectivity/: CONNECTIVITY_DIAGRAMS.md  README_CONNECTIVITY_FIX.md
docs/implementation/: HYBRID_APPROACH_IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  OPTION_C_IMPLEMENTATION.md
docs/issues/: ISSUE_15_ANALYSIS.md  ISSUE_15_TO_19_COMPLETION_SUMMARY.md  ISSUE_16_ANALYSIS.md  ISSUE_17_ANALYSIS.md  ISSUE_18_ANALYSIS.md  ISSUE_19_ANALYSIS.md  ISSUE_7_FIX_SUMMARY.md
docs/operations/: DEPLOYMENT_STATUS.md  QUICK_REFERENCE.md
docs/project/: CLOSURE_RECOMMENDATIONS.md  FINAL_SUMMARY.md  PROGRESS_SUMMARY.md  PROJECT_COMPLETE.md
docs/testing/: E2E_TEST_INDEX.txt  E2E_TEST_REPORT.md  README_TEST_RESULTS.md  TEST_INDEX.md  TEST_RESULTS_JSON_API.md
docs/tickers/: TICKERS_KNOWLEDGE_BASE.md
frontend/: .env.example  APP_STRUCTURE.md  ARCHITECTURE.md  IMPLEMENTATION_COMPLETE.md  QUICK_REFERENCE.md  QUICK_START.md  REACT_IMPLEMENTATION_SUMMARY.md  README.md  ROUTING_GUIDE.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: API_INTEGRATION.md  API_QUICK_REFERENCE.md  App.tsx
functions/compute/: feature_engine.py  options_math.py  technicals.py  volatility.py
functions/config/: loader.py  models.py  settings.py
functions/db/: README.md  __init__.py  connection.py  migrations.py  repositories.py  schema.sql
functions/detect/: __init__.py  base.py  earnings_crush_detector.py  low_iv_detector.py  regime_shift_detector.py  rich_premium_detector.py  skew_anomaly_detector.py  term_kink_detector.py
functions/explain/: __init__.py  template_explain.py
functions/export/: __init__.py  json_exporter.py
functions/market/: __init__.py  cache.py  circuit_breaker.py  circuit_breaker_examples.py  demo_provider.py  (+3 more)
inputs/: config.yaml
scripts/: run_api.py  run_scan.py  scheduler_engine.py
(+74 files in other folders)
